[gd_scene load_steps=6 format=3 uid="uid://o6vf4guhfib1"]

[ext_resource type="Script" uid="uid://nswymt561l4x" path="res://assets/scripts/login.gd" id="1_kj5ca"]
[ext_resource type="Texture2D" uid="uid://cjejvll72xhdf" path="res://assets/puzzles/new_background.jpg" id="2_kj5ca"]
[ext_resource type="Texture2D" uid="uid://1gto0cal0d8t" path="res://assets/images/throbber1.png" id="4_4a6nw"]
[ext_resource type="Script" uid="uid://b7kl13vp3afn1" path="res://assets/scripts/throbber.gd" id="5_hgqic"]
[ext_resource type="Theme" uid="uid://cfxebjeqy3ke7" path="res://assets/themes/bold_text.tres" id="6_j7moi"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kj5ca")

[node name="new background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -93.0
offset_top = -64.0
offset_right = 2124.0
offset_bottom = 1270.0
texture = ExtResource("2_kj5ca")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48700002
anchor_top = 0.5
anchor_right = 0.48700002
anchor_bottom = 0.5
offset_left = -585.04004
offset_top = -240.0
offset_right = 614.95996
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Not logged in"

[node name="UsernameLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 65
placeholder_text = "Email"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 65
text = "Log in"

[node name="LoadingScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="Control" parent="LoadingScreen"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="LoadingScreen/Background" groups=["dropable"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kj5ca")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="LoadingScreen/Background/TextureRect"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_4a6nw")
expand_mode = 1
script = ExtResource("5_hgqic")

[node name="Label" type="Label" parent="LoadingScreen/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -143.0
offset_top = 603.0
offset_right = 147.0
offset_bottom = 707.0
grow_horizontal = 2
theme = ExtResource("6_j7moi")
theme_override_colors/font_color = Color(0.505882, 0.34902, 0.231373, 1)
text = "Loading..."

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
